--- a/index.html
+++ b/index.html
@@ -1,9 +1,120 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="">
+          WebStudio
+        </a>
+
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </header>
+
+    <div>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <a href="">Заказать услугу</a>
+      </section>
+    </div>
+
+    <section>
+      <h2>Наши преимущества</h2>
+      <ul>
+        <li>
+          <h3>Внимание к деталям</h3>
+          <p>
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
+        </li>
+        <li>
+          <h3>Пунктуальность</h3>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
+        <li>
+          <h3>Планирование</h3>
+          <p>
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает.
+          </p>
+        </li>
+        <li>
+          <h3>Современные технологии</h3>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий.
+          </p>
+        </li>
+      </ul>
+
+      <h4>Чем мы занимаемся</h4>
+      <ul>
+        <li><img src="./img/1.jpg" alt="" /></li>
+        <li><img src="./img/2.jpg" alt="" /></li>
+        <li><img src="./img/3.jpg" alt="" /></li>
+      </ul>
+    </section>
+
+    <section>
+      <h5>Наша команда</h5>
+      <ul>
+        <li>
+          <img src="./img/ИгорьДемьяненко.jpg" alt="фото Игорь Демьяненко" />
+          <h6>Игорь Демьяненко</h6>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./img/ОльгаРепина.jpg" alt="фото Ольга Репина" />
+          <h6>Ольга Репина</h6>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./img/НиколайТарасов.jpg" alt="фото Николай Тарасов" />
+          <h6>Николай Тарасов</h6>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./img/МихаилЕрмаков.jpg" alt="фото Михаил Ермаков" />
+          <h6>Михаил Ермаков</h6>
+          <p>MUI Designer</p>
+        </li>
+      </ul>
+    </section>
+
+    <footer>
+      <a href="">
+        WebStudio
+      </a>
+      <address>
+        <ul>
+          <li>
+            <a href="г.Киев,пр-тЛесиУкраинки,26"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
