Конечная разметка страницы Студия

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <a href="">
-          WebStudio
+          <img src="./logo/WebStudio.svg" alt="WebStudio" />
         </a>
 
         <ul>
