Исправленная разметка страницы Студия

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <a href="">
-          <img src="./logo/WebStudio.svg" alt="WebStudio" />
+          WebStudio
         </a>
 
         <ul>
@@ -20,85 +20,111 @@
       </nav>
       <address>
         <ul>
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </header>
 
-    <div>
+    <main>
+      <div>
+        <section>
+          <h1>Эффективные решения для вашего бизнеса</h1>
+          <button type="button">Заказать услугу</button>
+        </section>
+      </div>
+
       <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <h2>Наши преимущества</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
       </section>
-    </div>
 
-    <section>
-      <h2>Наши преимущества</h2>
-      <ul>
-        <li>
-          <h3>Внимание к деталям</h3>
-          <p>
-            Идейные соображения, а также начало повседневной работы по
-            формированию позиции.
-          </p>
-        </li>
-        <li>
-          <h3>Пунктуальность</h3>
-          <p>
-            Задача организации, в особенности же рамки и место обучения кадров
-            влечет за собой.
-          </p>
-        </li>
-        <li>
-          <h3>Планирование</h3>
-          <p>
-            Равным образом консультация с широким активом в значительной степени
-            обуславливает.
-          </p>
-        </li>
-        <li>
-          <h3>Современные технологии</h3>
-          <p>
-            Значимость этих проблем настолько очевидна, что реализация плановых
-            заданий.
-          </p>
-        </li>
-      </ul>
+      <section>
+        <h4>Чем мы занимаемся</h4>
+        <ul>
+          <li>
+            <img src="./img/1.jpg" alt="" width="370" height="294" />
+          </li>
+          <li><img src="./img/2.jpg" alt="" width="370" height="294" /></li>
+          <li><img src="./img/3.jpg" alt="" width="370" height="294" /></li>
+        </ul>
+      </section>
 
-      <h4>Чем мы занимаемся</h4>
-      <ul>
-        <li><img src="./img/1.jpg" alt="" /></li>
-        <li><img src="./img/2.jpg" alt="" /></li>
-        <li><img src="./img/3.jpg" alt="" /></li>
-      </ul>
-    </section>
-
-    <section>
-      <h5>Наша команда</h5>
-      <ul>
-        <li>
-          <img src="./img/ИгорьДемьяненко.jpg" alt="фото Игорь Демьяненко" />
-          <h6>Игорь Демьяненко</h6>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img src="./img/ОльгаРепина.jpg" alt="фото Ольга Репина" />
-          <h6>Ольга Репина</h6>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img src="./img/НиколайТарасов.jpg" alt="фото Николай Тарасов" />
-          <h6>Николай Тарасов</h6>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./img/МихаилЕрмаков.jpg" alt="фото Михаил Ермаков" />
-          <h6>Михаил Ермаков</h6>
-          <p>MUI Designer</p>
-        </li>
-      </ul>
-    </section>
+      <section>
+        <h5>Наша команда</h5>
+        <ul>
+          <li>
+            <img
+              src="./img/ИгорьДемьяненко.jpg"
+              width="270"
+              height="260"
+              alt="фото Игорь Демьяненко"
+            />
+            <h6>Игорь Демьяненко</h6>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./img/ОльгаРепина.jpg"
+              width="270"
+              height="260"
+              alt="фото Ольга Репина"
+            />
+            <h6>Ольга Репина</h6>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./img/НиколайТарасов.jpg"
+              width="270"
+              height="260"
+              alt="фото Николай Тарасов"
+            />
+            <h6>Николай Тарасов</h6>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./img/МихаилЕрмаков.jpg"
+              width="270"
+              height="260"
+              alt="фото Михаил Ермаков"
+            />
+            <h6>Михаил Ермаков</h6>
+            <p>MUI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <footer>
       <a href="">
@@ -111,8 +137,8 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
