--- a/index.html
+++ b/index.html
@@ -4,61 +4,77 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.7.0/modern-normalize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="">
-          WebStudio
+        <a href="./index.html" class="logo">
+          Web
+          <span class="logo-header">Studio</span>
         </a>
 
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="address list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
 
-      <section>
-        <h2>Наши преимущества</h2>
-        <ul>
+      <section class="section">
+        <h2 class="title-none">Наши преимущества</h2>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="title">Пунктуальность</h3>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="title">Планирование</h3>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="title">Современные технологии</h3>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -66,9 +82,9 @@
         </ul>
       </section>
 
-      <section>
-        <h4>Чем мы занимаемся</h4>
-        <ul>
+      <section class="section">
+        <h4 class="title-images">Чем мы занимаемся</h4>
+        <ul class="list">
           <li>
             <img src="./img/1.jpg" alt="" width="370" height="294" />
           </li>
@@ -77,9 +93,9 @@
         </ul>
       </section>
 
-      <section>
-        <h5>Наша команда</h5>
-        <ul>
+      <section class="section-command">
+        <h5 class="title-images">Наша команда</h5>
+        <ul class="list">
           <li>
             <img
               src="./img/ИгорьДемьяненко.jpg"
@@ -87,8 +103,8 @@
               height="260"
               alt="фото Игорь Демьяненко"
             />
-            <h6>Игорь Демьяненко</h6>
-            <p>Product Designer</p>
+            <h6 class="title-names">Игорь Демьяненко</h6>
+            <p class="text-work">Product Designer</p>
           </li>
           <li>
             <img
@@ -97,8 +113,8 @@
               height="260"
               alt="фото Ольга Репина"
             />
-            <h6>Ольга Репина</h6>
-            <p>Frontend Developer</p>
+            <h6 class="title-names">Ольга Репина</h6>
+            <p class="text-work">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -107,8 +123,8 @@
               height="260"
               alt="фото Николай Тарасов"
             />
-            <h6>Николай Тарасов</h6>
-            <p>Marketing</p>
+            <h6 class="title-names">Николай Тарасов</h6>
+            <p class="text-work">Marketing</p>
           </li>
           <li>
             <img
@@ -117,26 +133,35 @@
               height="260"
               alt="фото Михаил Ермаков"
             />
-            <h6>Михаил Ермаков</h6>
-            <p>MUI Designer</p>
+            <h6 class="title-names">Михаил Ермаков</h6>
+            <p class="text-work">MUI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <a href="">
-        WebStudio
+      <a href="./index.html" class="logo">
+        Web
+        <span class="logo-footer">Studio</span>
       </a>
       <address>
-        <ul>
-          <li>
-            <a href="г.Киев,пр-тЛесиУкраинки,26"
+        <ul class="list">
+          <li class="footer-address">
+            <a href="г.Киев,пр-тЛесиУкраинки,26" class="footer-location"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="footer-address">
+            <a href="mailto:info@devstudio.com" class="footer-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="footer-address">
+            <a href="tel:+380961111111" class="footer-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
